[package]
name = "mist"
version = "0.1.0"
edition = "2024"

[dependencies]
floem = { git = "https://github.com/lapce/floem", rev = "778bb5f2aa08429e579ee2e6ac97e84fbf18b618", version = "0.2.0" }
ropey = "1"
encoding_rs = "0.8"
chardetng = "0.1"
unicode-segmentation = "1"
unicode-width = "=0.1.12"
smallvec = "1"
anyhow = "1"

